crates/plotnik-tests/tests/04-emit/types/recursion/error_repetition_capture_of_recursive_multi_node_def.txt
A = {
  (expression_statement)
  (statement_block (A))?
}

Q = (program
  (A)* @xs
)
------------------ DIAGNOSTICS -------------------
error: one repeat of this `*` group doesn't match exactly one node, so there is no single node to bind per element
 --> query.ptk:7:3
  |
7 |   (A)* @xs
  |   ^^^^
  |
help: add internal captures: `{(a) @a (b) @b}* @items`
